[package]
name = "pngme"
version = "1.0.0"
authors = ["rusthero"]
edition = "2021"
description = "Command line program that lets you hide secret messages in PNG files."
readme = "https://github.com/rusthero/pngme/blob/master/README.md"
repository = "https://github.com/rusthero/pngme"
license = "MIT License"

[dependencies]
clap = { version = "4.0.22", features = ["derive"] }
anyhow = "1.0.66"
crc = "3.0.0"
